# tgbot

./: .dockerignore  .env.example  .gitignore  Bot.cpp  Bot.h  BotCommandHandlers.cpp  BotCommandHandlers.h  BotView.cpp  BotView.h  CMakeLists.txt  CurlHTTPClient.cpp  CurlHTTPClient.h  Dockerfile  Education.cpp  Education.h  GroupMap.cpp  GroupMap.h  HTTPClient.cpp  HTTPClient.h  IServiceSchedule.h  IbotView.h  LICENSE  Makefile  MessageHandlers.cpp  MessageHandlers.h  MyBot.cpp  MyBot.h  README.md  ScheduleService.cpp  ScheduleService.h  ServiceSchedule.cpp  ServiceSchedule.h  UserState.h  View.cpp  createServiceSchedule.cpp  createServiceSchedule.h  createView.cpp  createView.h  docker-compose.yml  telegram_bot.cpp
.github/workflows/: ci-cd.yml
src/: main.cpp
src/config/: Config.cpp  Config.h
src/controllers/: MessageHandlers.cpp  MessageHandlers.h
src/core/: Bot.cpp  Bot.h
src/services/: HTTPClient.cpp  IServiceSchedule.h  ServiceSchedule.cpp
src/views/: BotView.cpp  BotView.h  IbotView.h
src/views/factory/: createServiceSchedule.cpp  createServiceSchedule.h  createView.cpp  createView.h
tests/: test_config.cpp  test_httpclient.cpp  test_serviceschedule.cpp
